<resources>
    <string name="app_name">Habits</string>
    <string name="version_app">1.0.0</string>

    <!-- Login layout -->
    <string name="login_button">Iniciar Sesión</string>
    <string name="email_text">Correo</string>
    <string name="pass_text">Contraseña</string>
    <string name="register_text">¿No estás registrado? Registrate</string>
    <string name="password_forget_text">¿Olvidaste tu contraseña?</string>
    <string name="login_google">Iniciar con Google</string>

    <!-- Register layout -->
    <string name="register_titulo">Registro de usuario</string>
    <string name="campo_nombre">Nombre</string>
    <string name="fecha_default">dd/mm/aaaa</string>
    <string name="fecha_button">Seleccionar fecha</string>
    <string name="campo_repass">Validar Contraseña</string>
    <string name="imagen_button">Seleccionar imagen</string>
    <string name="registro_button">Registrarse</string>

    <!-- Password Recovery layout -->
    <string name="pass_recovery_title">Recuperar cuenta</string>
    <string name="pass_recovery_text">Ingrese un correo asociado a una cuenta de habits</string>
    <string name="send_mail_button">Enviar correo</string>

    <!-- Main layout -->
    <string name="bienvenida">!Bienvenido %1$s!</string>

    <!-- Menu -->
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="default_web_client_id">4100401566-f46c60kacm96131q4v0roqgaju164e2p.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Habits -->
    <string name="habits">Habitos</string>
    <string name="add">Agregar</string>
    <string name="delete">Eliminar</string>
    <string name="edit">Editar</string>
    <string name="add_habit">Añade tu nuevo habito</string>
    <string name="create_habit">Crear Habito</string>

</resources>