<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nord2"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/login_button"
        android:textColor="@color/nord6"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/nord9"
        android:ems="15"
        android:hint="@string/email_text"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/nord9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_txt" />

    <EditText
        android:id="@+id/password_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/nord9"
        android:ems="15"
        android:hint="@string/pass_text"
        android:inputType="textPassword"
        android:textColorHint="@color/nord9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_txt" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/nord9"
        android:text="@string/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_txt" />

    <TextView
        android:id="@+id/register_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/register_text"
        android:textColor="@color/nord6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_login" />

    <TextView
        android:id="@+id/pass_forget_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/password_forget_text"
        android:textColor="@color/nord6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_lbl" />

    <FrameLayout
        android:id="@+id/container_login"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@color/nord7"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn">

        <ImageView
            android:id="@+id/google_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="start|center"
            android:layout_marginStart="30dp"
            app:srcCompat="@drawable/ic_google" />

        <TextView
            android:id="@+id/google_login_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_google"
            android:textColor="@color/nord0"
            android:layout_gravity="end|center"
            android:layout_marginEnd="30dp"/>

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>